# solana_web_token

./: .env.example  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  unit_test.env
.github/workflows/: rust.yml
examples/: rocket_wallet_auth.rs
src/: error.rs  lib.rs  manager.rs  token.rs
src/core/: manager.rs  mod.rs  token.rs
src/frameworks/: rocket.rs
src/providers/: mod.rs  solana.rs  solana_wallet_auth.rs
