[package]
name = "solana-web-token"
version = "0.1.0"
edition = "2024"

[features]
default = ["rocket"]
rocket = ["dep:rocket"]

[dependencies]
base64 = "0.22.1"
jsonwebtoken = "9.3.1"
rocket = { version = "0.5.1", optional = true, features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
solana-sdk = "2.2.2"
thiserror = "2.0.12"

[dev-dependencies]
dotenv = "0.15.0"

[[example]]
name = "wallet_auth"
path = "examples/rocket_wallet_auth.rs"