[package]
name = "solana-web-token"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "JWT authentication for Rocket using Solana wallet signatures"
repository = "https://github.com/joewxlker/solana-web-token"
keywords = ["solana", "jwt", "authentication", "rocket", "web3"]
categories = ["authentication", "web-programming", "cryptography"]
readme = "README.md"
exclude = [".env", ".env.*"]

[features]
default = ["rocket"]
rocket = ["dep:rocket"]

[dependencies]
base64 = "0.22.1"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-sdk = "2.2.2"
thiserror = "1.0"

rocket = { version = "0.5.1", optional = true, features = ["json"] }

[dev-dependencies]
dotenv = "0.15.0"
rocket = { version = "0.5.1", features = ["json", "secrets"] }

[[example]]
name = "wallet_auth"
path = "examples/rocket_wallet_auth.rs"
